--- a/mindgrid/src-tauri/Cargo.toml
+++ b/mindgrid/src-tauri/Cargo.toml
@@ -25,7 +25,7 @@ serde_json = "1"
 
 # PTY support
 portable-pty = "0.8"
-tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util"] }
+tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "process"] }
 parking_lot = "0.12"
 uuid = { version = "1", features = ["v4"] }
 tauri-plugin-dialog = "2.4.2"
