--- a/mindgrid/package.json
+++ b/mindgrid/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "lsof -ti:1420 | xargs kill -9 2>/dev/null; vite",
+    "dev:dev-mode": "lsof -ti:1422 | xargs kill -9 2>/dev/null; MINDGRID_DEV_MODE=1 vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "tauri:dev-mode": "MINDGRID_DEV_MODE=1 tauri dev --config src-tauri/tauri.dev-mode.conf.json",
     "worktree": "../scripts/worktree.sh",
     "worktree:create": "../scripts/worktree.sh create",
     "worktree:list": "../scripts/worktree.sh list",
@@ -21,6 +23,7 @@
     "@tauri-apps/plugin-store": "^2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "@openai/codex-sdk": "^0.65.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zustand": "^5.0.9"
