--- a/mindgrid/package.json
+++ b/mindgrid/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 1424",
-    "dev:host": "vite --port 1422",
+    "dev:preview": "vite --port 1426",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "MINDGRID_DEV_MODE=1 tauri dev --config src-tauri/tauri.conf.json",
-    "tauri:host": "MINDGRID_DEV_MODE=1 tauri dev --config src-tauri/tauri.host.conf.json",
+    "tauri": "tauri dev --config src-tauri/tauri.conf.json",
+    "tauri:preview": "tauri dev --config src-tauri/tauri.worktree.conf.json",
     "worktree": "../scripts/worktree.sh",
     "worktree:create": "../scripts/worktree.sh create",
     "worktree:list": "../scripts/worktree.sh list",
