--- a/mindgrid/package.json
+++ b/mindgrid/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.3.1",
     "@tauri-apps/plugin-store": "^2",
+    "@tauri-apps/plugin-global-shortcut": "^2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "monaco-editor": "^0.55.1",
