--- a/mindgrid/src-tauri/Cargo.toml
+++ b/mindgrid/src-tauri/Cargo.toml
@@ -31,4 +31,5 @@ uuid = { version = "1", features = ["v4"] }
 tauri-plugin-dialog = "2.4.2"
 tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
 tauri-plugin-store = "2"
+tauri-plugin-global-shortcut = "2"
 
